--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.8.7"
   },
   "eslintConfig": {
     "rules": {
