--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Prueba desarrollador fullstack evolution - backend",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node api/index.js",
+    "start": "nodemon --exec babel-node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Luis Román",
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.7"
   },
   "eslintConfig": {
